# middle_out

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  middle_out  test.mido  test.txt  test_out.txt
src/: bitstream.cpp  bitstream.h  compressor.cpp  compressor.h  middle_out.cpp  rans.cpp  rans.h  suffix_array.cpp  suffix_array.h
